# utf8-rune

./: .rustfmt.toml  Cargo.toml  README.md
src/: byte_type.rs  errors.rs  heuristic.rs  internal.rs  lib.rs  mem.rs  parts.rs  pointer.rs  rune.rs  runes.rs
tests/: test_byte_type.rs  test_get_rune_cutoff_at_index.rs  test_next_valid_cuttoff.rs  test_parts.rs  test_previous_valid_cuttoff.rs  test_rune.rs  test_runes.rs  test_split_at_first_rune.rs
